k8s/base/gcp_gke/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpm-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mpm-backend
  template:
    metadata:
      labels:
        app: mpm-backend
    spec:
      containers:
        - name: mpm-backend
          image: enaccess/micropowermanager-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: storage-data
              mountPath: /var/www/html/storage
              subPath: ""
            - name: logs-data
              mountPath: /var/www/html/storage/logs
              subPath: logs
      volumes:
        - name: storage-data
          persistentVolumeClaim:
            claimName: mpm-storage-pvc
        - name: logs-data
          persistentVolumeClaim:
            claimName: mpm-logs-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpm-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mpm-frontend
  template:
    metadata:
      labels:
        app: mpm-frontend
    spec:
      containers:
        - name: mpm-frontend
          image: enaccess/micropowermanager-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpm-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mpm-scheduler
  template:
    metadata:
      labels:
        app: mpm-scheduler
    spec:
      containers:
        - name: mpm-scheduler
          image: enaccess/micropowermanager-scheduler:latest
          imagePullPolicy: Always
          # micropowermanager-scheduler is a backend service and uses the same configuration as micropowermanager-backend
          volumeMounts:
            - name: storage-data
              mountPath: /var/www/html/storage
              subPath: ""
            - name: logs-data
              mountPath: /var/www/html/storage/logs
              subPath: logs
      volumes:
        - name: storage-data
          persistentVolumeClaim:
            claimName: mpm-storage-pvc
        - name: logs-data
          persistentVolumeClaim:
            claimName: mpm-logs-pvc
