k8s/base/gcp_gke/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mpm-backend-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "mpm-backend-config-backend"}'
spec:
  selector:
    app: mpm-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mpm-frontend-service
spec:
  selector:
    app: mpm-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
